k3s/loopin-production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loopin-system
  namespace: production
  annotations:
    # kubernetes.io/ingress.class: traefik # Traefik 컨트롤러 사용
    # traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    # traefik.ingress.kubernetes.io/router.tls: "true" # TLS 사용 시
    # cert-manager.io/cluster-issuer: tls-issuer
    kubernetes.io/ingress.class: traefik
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    traefik.ingress.kubernetes.io/ingress.class: traefik
spec:
  tls:
    - hosts:
        - api.loopin.bid
        - auth.loopin.bid
        - echo.loopin.bid
      secretName: loopin-bid-tls
  rules:
    - host: api.loopin.bid
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 80
    - host: web.loopin.bid
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-client
                port:
                  number: 80
    - host: echo.loopin.bid
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-server
                port:
                  number: 80
